# ChatGPT-application-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: code_review.yml
chatgpt_v01/: pyproject.toml
chatgpt_v01/service/summarize_docs/: prompts.txt
common/: utils.py
service/ads_copywriter/: ads_copywriter.py  config.yaml  prompts.txt
service/blog_writer/: blog_post.html  blog_writer.py  config.yaml  prompts.txt  template.html
service/insta_post/: config.yaml  instabot.py  prompt_template_IMAGE.txt  prompt_template_TEXT.txt  prompt_template_TRANS.txt
service/pdf_summarize/: config.yaml  prompt_template_TRANS.txt  summarize_pdf.py
service/summarize_docs/: config.yaml  summarize_docs.py
service/telegram_bot/: bot.py
service/virtual_assistant/: virtual_assistant.py
service/youtube_summarize/: all_summarize.txt  chunk_summarize.txt  config.yaml  prompt_template_TRANS.txt  summarize.py  summarize_youtube.py
tests/: openai-api-test.py
