[tool.poetry]
name = "chatgpt-v01"
version = "0.1.0"
description = ""
authors = ["Oyeon <data0311@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
openai = "^1.35.13"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
